# UAVPathfinder

./: .gitignore  LICENSE  README.md  pyproject.toml
UAVpathfinder/: dependencies.py  visualization.py
UAVpathfinder/maps/: free_space_graph.py  free_spaces_test.py  fress_spaces_test.py  map.py  map_test.py  map_utils.py  route_graph.py  utils.py
UAVpathfinder/visualization/: dependencies.py  mesh.py  render.py
tests/test_maps/: test_map.py
