[tool.poetry]
name = "uavpathfinder"
version = "0.0.1"
description = "3d Path planning python library for UAVs"
authors = ["Mykyta Prokaiev <mykytaprokaiev@gmail.com>", "Farouk Haidar <farouk.haidar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
open3d = "^0.17.0"
scikit-learn = "^1.2.2"
pyyaml = "^6.0"
addict = "^2.4.0"
pillow = "^9.5.0"
pandas = "^2.0.2"
tqdm = "^4.65.0"
shapely = "^2.0.1"
meshio = "^5.3.4"
wheel = "^0.40.0"
setuptools = "^67.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
