[tool.poetry]
name = "uavpathfinder"
version = "0.0.1"
description = "3d Path planning python library for UAVs"
authors = ["Mykyta Prokaiev <mykytaprokaiev@gmail.com>", "Farouk Haidar <farouk.haidar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
pydantic = "^1.10.8"
osmnx = "^1.3.1.post0"
matplotlib = "^3.7.1"
geopandas = "^0.13.0"
numpy = "^1.24.3"
pytest = "^7.3.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
