[tool.poetry]
name = "uavpathfinder"
version = "0.0.1"
description = "3d Path planning python library for UAVs"
authors = ["Mykyta Prokaiev <mykytaprokaiev@gmail.com>", "Farouk Haidar <farouk.haidar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^1.10.8"
open3d = "^0.17.0"
scikit-learn = "^1.2.2"
pyyaml = "^6.0"
addict = "^2.4.0"
pillow = "^9.5.0"
pandas = "^2.0.2"
tqdm = "^4.65.0"
shapely = "^2.0.1"
wheel = "^0.40.0"
setuptools = "^67.8.0"
networkx = "^3.1"
osmnx = "^1.3.1.post0"
matplotlib = "^3.7.1"
geopandas = "^0.13.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
trimesh = "^3.21.7"
pyglet = "<2"
mapbox-earcut = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.3.1"
black = "^23.3.0"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
